[project]
name = "census"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Brandon D'Agostino", email = "bdag@stanford.edu" }
]
dependencies = []
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ipython>=8.27.0",
]

[tool.rye.workspace]
members = ["packages/*"]
